# agent-term

./: .gitignore  .gitmodules  .lsp-mcp.json  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LEARNINGS.md  README.md  agentterm.desktop  clippy.toml  coderabbit.txt  debug.ps1  debug.sh  package.json  pnpm-lock.yaml
.cargo/: config.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml  release.yml  release.yml.bk
.lsp-mcp/semanticSearch/: metadata.db  vectors.hnsw.data  vectors.hnsw.graph
.serena/: project.yml
assets/: AppIcon.icns
crates/agentterm-mcp-proxy/: Cargo.toml
crates/agentterm-mcp-proxy/src/: main.rs
crates/agentterm-shared/: Cargo.toml
crates/agentterm-shared/src/: diagnostics.rs  lib.rs  socket_path.rs
crates/agentterm_layout/: Cargo.toml
crates/agentterm_layout/src/: error.rs  lib.rs  model.rs  storage.rs
crates/agentterm_mcp/: Cargo.toml
crates/agentterm_mcp/src/: config.rs  diagnostics.rs  lib.rs  manager.rs  pool_manager.rs  proxy.rs
crates/agentterm_mcp/src/pool/: mod.rs  pool.rs  socket_proxy.rs  types.rs
crates/agentterm_search/: Cargo.toml
crates/agentterm_search/src/: index.rs  lib.rs  query.rs
crates/agentterm_session/: Cargo.toml
crates/agentterm_session/src/: diagnostics.rs  error.rs  lib.rs  model.rs  storage.rs
crates/agentterm_tools/: Cargo.toml
crates/agentterm_tools/src/: lib.rs
crates/gpui_term/: Cargo.toml
crates/gpui_term/src/: lib.rs  terminal.rs  terminal_element.rs  terminal_palette.rs  terminal_view.rs
crates/gpui_term/src/mappings/: mod.rs  mouse.rs
scripts/: clippy  clippy.ps1  create-ico.ps1  init-submodules.ps1  init-submodules.sh  package.ps1  package.sh  sync-version.mjs  wix-path.ps1
src/: App.css  App.tsx  app.rs  assets.rs  fonts.rs  main.rs  main.tsx  settings.rs  settings_dialog.rs  terminal_schemes.rs  text_input.rs  theme.rs  updater.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/agentterm-gpui/: Cargo.toml
src-tauri/crates/agentterm-gpui/src/: assets.rs  main.rs  settings.rs  settings_dialog.rs  text_input.rs
src-tauri/crates/agentterm-gpui/src/icons/: lucide_icons.rs  mod.rs  tool_icons.rs
src-tauri/crates/agentterm-gpui/src/ui/: context_menu.rs  icon_picker.rs  lucide_search.rs  mod.rs  popup_menu.rs  slider.rs  switch.rs  tab.rs  tab_bar.rs
src-tauri/crates/agentterm-mcp-proxy/: Cargo.toml
src-tauri/crates/agentterm-mcp-proxy/src/: main.rs
src-tauri/crates/agentterm-shared/: Cargo.toml
src-tauri/crates/agentterm-shared/src/: socket_path.rs  transport.rs
src-tauri/crates/agentterm_mcp/: Cargo.toml
src-tauri/crates/agentterm_mcp/src/: config.rs  diagnostics.rs  lib.rs  manager.rs  pool_manager.rs
src-tauri/crates/agentterm_mcp/src/pool/: mod.rs  pool.rs  socket_proxy.rs  types.rs
src-tauri/crates/agentterm_session/src/: diagnostics.rs  lib.rs  model.rs  storage.rs
src-tauri/crates/agentterm_tools/src/: lib.rs
src-tauri/crates/gpui-component/: Cargo.toml
src-tauri/crates/gpui-component-macros/: Cargo.toml
src-tauri/crates/gpui_term/: Cargo.toml
src-tauri/crates/gpui_term/src/: lib.rs  terminal.rs
src-tauri/crates/gpui_term/src/mappings/: mod.rs  mouse.rs
src-tauri/scripts/: build-sidecar.mjs  dev.mjs
src-tauri/src/: diagnostics.rs  lib.rs  main.rs  shells.rs  tools.rs
src-tauri/src/mcp/: config.rs  error.rs  manager.rs  mod.rs  pool_manager.rs  proxy.rs
src-tauri/src/mcp/pool/: mod.rs  pool.rs  socket_proxy.rs  transport.rs  types.rs
src-tauri/src/search/: index.rs  mod.rs  query.rs
src-tauri/src/session/: error.rs  mod.rs  model.rs  runtime.rs  status.rs  storage.rs  tools.rs
src-tauri/src/update/: mod.rs
src-tauri/src/window/: mod.rs  storage.rs
src/app/: actions.rs  command_palette.rs  command_palette_provider.rs  constants.rs  handlers.rs  layout_manager.rs  menus.rs  mod.rs  search_manager.rs  sidebar.rs  state.rs  terminal_container.rs  terminal_pool.rs  window_registry.rs
src/components/: Sidebar.css  Sidebar.tsx  Terminal.tsx  WindowDropZone.css  WindowDropZone.tsx  theme-provider.tsx
src/components/hooks/: useOutsideClick.ts
src/components/settings/: AppearanceSettings.tsx  GeneralSettings.tsx  MCPServerForm.tsx  MCPServerListItem.tsx  MCPSettings.tsx  PoolDiagnostics.tsx  PoolSettings.tsx  StatusDot.tsx  TerminalSettings.tsx  ToolsSettings.tsx  index.ts  types.ts
src/components/settings/appearance/: AccentColorSection.tsx  TerminalColorSchemeSection.tsx  TerminalFontSection.tsx  ThemeSection.tsx  index.ts
src/components/settings/general/: AppInfoSection.tsx  ResetActionCard.tsx  ResetSection.tsx  ToggleRow.tsx  UpdateStatusBanner.tsx  UpdatesSection.tsx  index.ts
src/components/settings/tools/: ShellConfigSection.tsx  ShellEditForm.tsx  ShellListItem.tsx  ToolForm.tsx  ToolListItem.tsx  index.ts
src/components/sidebar/: CommandBar.tsx  DialogShell.tsx  DynamicLucideIcon.tsx  EditProjectDialog.tsx  EditTabDialog.tsx  IconPicker.tsx  LucideIcon.tsx  LucideIconSearchModal.tsx  MCPDialog.tsx  McpManagerDialog.tsx  MenuPopover.tsx  MirrorBadge.tsx  ProjectSection.tsx  SearchBar.tsx  SectionHeader.tsx  SessionRow.tsx  SettingsDialog.tsx  Sidebar.css  Sidebar.tsx  SidebarStatusBar.tsx  TabPicker.tsx  TabsList.tsx  UpdateNotification.tsx  constants.tsx  lucideIconList.ts  settingsTypes.ts  types.ts  useToolIcons.ts  utils.tsx
src/components/sidebar/dnd/: DragOverlayContent.tsx  SortableSection.tsx  (+3 more)
src/components/titlebar/: TitleBar.css  TitleBar.tsx
src/components/ui/: switch.tsx
src/dialogs/: about_dialog.rs  mcp_manager.rs  mod.rs  project_editor.rs  release_notes_dialog.rs  session_editor.rs  tab_picker.rs  tool_editor_dialog.rs
src/hooks/: useCrossWindowDrop.ts  usePoolStatus.ts  useSearchIndexStatus.ts
src/icons/: lucide_icons.rs  mod.rs  tool_icons.rs
src/lib/: accentColors.ts  terminalThemes.ts  windowContext.ts
src/store/: terminalSettingsStore.ts  terminalStore.ts  updateStore.ts
src/styles/: tokens.css
src/types/: shells.ts  tools.ts  update.ts
src/ui/: blurred_dropdown.rs  helpers.rs  icon_picker.rs  lucide_search.rs  mod.rs
wix/: main.wxs
wix/src/: product.wxs
(+5 files in other folders)
