[workspace]
resolver = "2"
members = [
    "crates/agentterm-shared",
    "crates/agentterm-mcp-proxy",
    "crates/agentterm_mcp",
    "crates/agentterm_session",
    "crates/agentterm_tools",
    "crates/gpui_term",
    ".",
]

[workspace.package]
edition = "2024"
publish = false
license = "MIT"

[workspace.dependencies]
dirs = "6.0.0"
time = { version = "0.3.44", features = ["formatting"] }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", rev = "7e39e1589200d3425a31e7961a407b2c9983d536" }
gpui-macros = "0.2.2"
gpui-component-macros = { path = "vendor/gpui-component/crates/macros" }
alacritty_terminal = "0.25"
portable-pty = "0.9"
futures = "0.3"
smol = "2.0"
parking_lot = "0.12"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
itertools = "0.14"
smallvec = { version = "1.15", features = ["const_new"] }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1"
schemars = "1"
notify = "7.0.0"
tracing = "0.1.41"
rust-i18n = "3"
ropey = { version = "=2.0.0-beta.1", features = ["metric_lines_lf", "metric_utf16"] }
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
lsp-types = { version = "0.97.0", features = ["proposed"] }
toml = "0.9.10"
uuid = { version = "1.19.0", features = ["v4"] }

[workspace.dependencies.windows]
version = "0.58.0"
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices"]

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[package]
name = "agentterm"
version = "0.1.4"
description = "Agent Term (pure Rust + GPUI)"
authors = ["Aditya Sharma"]
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
agentterm_mcp = { path = "crates/agentterm_mcp" }
agentterm_session = { path = "crates/agentterm_session" }
agentterm_tools = { path = "crates/agentterm_tools" }
anyhow.workspace = true
dirs.workspace = true
gpui.workspace = true
gpui_term = { path = "crates/gpui_term" }
gpui-component = { path = "vendor/gpui-component/crates/ui" }
once_cell = "1.19"
parking_lot.workspace = true
rust-embed = "8.5"
schemars.workspace = true
serde.workspace = true
smallvec.workspace = true
tokio.workspace = true
toml.workspace = true
unicode-segmentation = "1.12.0"
