[workspace]
resolver = "2"
members = [
    "crates/agentterm-shared",
    "crates/agentterm-mcp-proxy",
    "crates/agentterm_layout",
    "crates/agentterm_mcp",
    "crates/agentterm_search",
    "crates/agentterm_session",
    "crates/agentterm_tools",
    "crates/gpui_term",
    ".",
]

[workspace.package]
edition = "2024"
publish = false
license = "MIT"

[workspace.dependencies]
dirs = "6.0.0"
time = { version = "0.3.44", features = ["formatting"] }
gpui = { git = "https://github.com/BumpyClock/zed", package = "gpui", rev = "149e1724574f4e27eeeadcc62e1e15e7afeddc25" }
gpui-macros = "0.2.2"
gpui-component-macros = { path = "vendor/gpui-component/crates/macros" }
alacritty_terminal = "0.25"
portable-pty = "0.9"
futures = "0.3"
smol = "2.0"
parking_lot = "0.12"
rayon = "1.10"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
itertools = "0.14"
smallvec = { version = "1.15", features = ["const_new"] }
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1"
schemars = "1"
notify = "8.2.0"
git2 = "0.20.3"
tracing = "0.1.41"
rust-i18n = "3"
ropey = { version = "=2.0.0-beta.1", features = ["metric_lines_lf", "metric_utf16"] }
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
lsp-types = { version = "0.97.0", features = ["proposed"] }
toml = "0.9.8"
uuid = { version = "1.19.0", features = ["v4"] }
rfd = "0.15.2"
regex = "1.10"

[workspace.dependencies.windows]
version = "0.62.2"
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"]

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[package]
name = "agentterm"
version = "0.1.4"
description = "Agent Term (pure Rust + GPUI)"
authors = ["Aditya Sharma"]
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
agentterm_layout = { path = "crates/agentterm_layout" }
agentterm_mcp = { path = "crates/agentterm_mcp" }
agentterm_search = { path = "crates/agentterm_search" }
agentterm_session = { path = "crates/agentterm_session" }
agentterm_tools = { path = "crates/agentterm_tools" }
anyhow.workspace = true
dirs.workspace = true
gpui.workspace = true
gpui_term = { path = "crates/gpui_term" }
gpui-component = { path = "vendor/gpui-component/crates/ui" }
git2.workspace = true
notify.workspace = true
once_cell = "1.19"
parking_lot.workspace = true
rust-embed = "8.5"
schemars.workspace = true
serde.workspace = true
smallvec.workspace = true
smol.workspace = true
tokio.workspace = true
toml.workspace = true
unicode-segmentation = "1.12.0"
uuid.workspace = true
rfd.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
raw-window-handle = "0.6"

# =============================================================================
# Packaging Configuration
# =============================================================================

[package.metadata.bundle]
name = "Agent Term"
identifier = "com.adityasharma.agentterm"
icon = ["assets/AppIcon.icns"]
version = "0.1.4"
copyright = "Copyright © 2025 Aditya Sharma"
category = "Developer Tools"
short_description = "Terminal emulator optimized for Agentic coding workflows"
long_description = """
Agent Term is a cross-platform terminal emulator optimized for Agentic coding workflows.
Users can run multiple AI coding tools like Claude Code and Codex CLI in parallel,
organizing open tabs by project for easy session management.
"""
osx_minimum_system_version = "11.0"

[package.metadata.deb]
maintainer = "Aditya Sharma"
copyright = "2025, Aditya Sharma"
license-file = ["LICENSE", "0"]
extended-description = """
Agent Term is a cross-platform terminal emulator optimized for Agentic coding workflows.
Users can run multiple AI coding tools like Claude Code and Codex CLI in parallel,
organizing open tabs by project for easy session management.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/agentterm", "usr/bin/", "755"],
    ["assets/agentterm.png", "usr/share/icons/hicolor/256x256/apps/agentterm.png", "644"],
    ["agentterm.desktop", "usr/share/applications/", "644"]
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/agentterm", dest = "/usr/bin/agentterm", mode = "755" },
    { source = "assets/agentterm.png", dest = "/usr/share/icons/hicolor/256x256/apps/agentterm.png", mode = "644" },
    { source = "agentterm.desktop", dest = "/usr/share/applications/agentterm.desktop", mode = "644" },
]

[package.metadata.wix]
upgrade-guid = "A1B2C3D4-E5F6-7890-ABCD-EF1234567890"
path-guid = "B2C3D4E5-F6A7-8901-BCDE-F12345678901"
license = false
eula = false
