[workspace]
resolver = "2"
members = [
    "crates/agentterm-shared",
    "crates/agentterm-mcp-proxy",
    ".",
]

[workspace.dependencies]
dirs = "6.0.0"
time = { version = "0.3.44", features = ["formatting"] }

[package]
name = "agent-term-app"
version = "0.1.4"
default-run = "agent-term-app"
description = "A Terminal App focussed on agentic coding"
authors = ["Aditya Sharma"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "terminal_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.10"
portable-pty = "0.9"
uuid = { version = "1.19.0", features = ["v4"] }
parking_lot = "0.12.5"
rayon = "1.11.0"
dirs = { workspace = true }
time = { workspace = true }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
window-vibrancy = "0.7.1"
agentterm-shared = { path = "crates/agentterm-shared" }
tauri-plugin-updater = "2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
shell-words = "1"

[target.'cfg(unix)'.dependencies]
users = "0.11"

[dev-dependencies]
tempfile = "3.24"
