[package]
name = "agentterm_search"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Search indexing for Claude JSONL conversation logs"

[dependencies]
dirs.workspace = true
parking_lot.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true

[dev-dependencies]
tempfile = "3.24"
