[package]
name = "agentterm_session"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dirs.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.24"

