[package]
name = "gpui_term"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
alacritty_terminal.workspace = true
futures.workspace = true
smol.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
itertools.workspace = true
smallvec.workspace = true
regex.workspace = true
once_cell = "1.19"
sysinfo = "0.33"
