[package]
name = "agentterm-gpui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "agentterm-gpui"
path = "src/main.rs"

[dependencies]
agentterm_mcp = { path = "../agentterm_mcp" }
agentterm_session = { path = "../agentterm_session" }
agentterm_tools = { path = "../agentterm_tools" }
anyhow.workspace = true
gpui.workspace = true
gpui_term = { path = "../gpui_term" }
parking_lot.workspace = true
tokio.workspace = true
