[package]
name = "agentterm-gpui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "agentterm-gpui"
path = "src/main.rs"

[dependencies]
agentterm_mcp = { path = "../agentterm_mcp" }
agentterm_session = { path = "../agentterm_session" }
agentterm_tools = { path = "../agentterm_tools" }
anyhow.workspace = true
gpui.workspace = true
gpui_term = { path = "../gpui_term" }
gpui-component = { path = "../../../vendor/gpui-component/crates/ui" }
parking_lot.workspace = true
tokio.workspace = true
unicode-segmentation = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
schemars = "1.2"
toml = "0.8"
dirs = "5.0"
smallvec.workspace = true
rust-embed = "8.5"
once_cell = "1.19"
