[package]
name = "agentterm_mcp"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
agentterm-shared = { path = "../agentterm-shared" }
anyhow.workspace = true
dirs.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true

